--- a/main.html
+++ b/main.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link href="./style.css" rel="stylesheet" type="text/css">
+        
+        <title>FM-Planning</title>
+
+    </head>
+
+    <body>
+        <header>
+        </header>
+        <main>FM Planning</main>
+        <footer></footer>
+    </body>
 </html>
